--- a/apps/market/templates/market/index.html
+++ b/apps/market/templates/market/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,49 +18,60 @@
     </style>
 </head>
 <body>
+ 
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-            <a class="navbar-brand" href="#"> <img src="https://s3.us-east-2.amazonaws.com/shirt-atlas/logo.gif" height="50" alt=""></a>
+            <a class="navbar-brand" href="#"> <img src="{% static 'ShirtAtlas.gif' %}" height="50" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
+                    <ul class="navbar-nav">
 
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Men</a>
+                        <a class="nav-link" href="/">Men</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Women</a>
+                        <a class="nav-link" href="/">Women</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Kids</a>
-                    </li>
+                        <a class="nav-link" href="/">Kids</a>
+                    </li>  
+                    
+                    {% if 'user_id' in request.session %}
                     <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              My Account
+                                My Account
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">Action</a>
-                              <a class="dropdown-item" href="#">Another action</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Something else here</a>
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
                             </div>
+                    </li> 
+                    {% else %}
+                    <li class="nav-item">
+                            <a class="nav-link" href="/register">Register</a>
+                    </li>  
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li> 
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Cart (0)</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cart (0)</a>
-                    </li>
-                    <li class="nav-item">
-                            <a class="nav-link" href="#">Checkout</a>
+                        <a class="nav-link" href="/">Checkout</a>
                     </li>
                     
-                  </ul>
+                    </ul>
             </div>
         </nav>
     <div class="container-fluid">
         <hr>
             <div class="card-group text-white ">
                     <div class="card">
-                      <img class="card-img" src="https://s3.us-east-2.amazonaws.com/shirt-atlas/m-s.jpg" alt="Card image">
+                      <img class="card-img" src="{% static 'm-s.jpg' %}" alt="Card image">
                       <div class="card-img-overlay black-opacity">
                         <h5 class="card-title">Shirts for Men</h5>
                         
@@ -69,7 +80,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img class="card-img-top" src="https://s3.us-east-2.amazonaws.com/shirt-atlas/w-s.jpg" alt="Card image">
+                      <img class="card-img-top" src=" {% static 'w-s.jpg' %}" alt="Card image">
                       <div class="card-img-overlay black-opacity">
                         <h5 class="card-title">Shirts for Women</h5>
                         <button type="button" class="btn btn-dark btn-sm">Shop Now</button>
@@ -77,7 +88,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img class="card-img-top" src="https://s3.us-east-2.amazonaws.com/shirt-atlas/kid-s.jpg" alt="Card image">
+                      <img class="card-img-top" src=" {% static 'kid-s.jpg' %}" alt="Card image">
                       <div class="card-img-overlay black-opacity">
                         <h5 class="card-title">Shirts for Kids</h5>
                         <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> -->
