--- a/apps/market/templates/market/login.html
+++ b/apps/market/templates/market/login.html
@@ -47,8 +47,8 @@
                           <a class="dropdown-item" href="#">Action</a>
                           <a class="dropdown-item" href="#">Another action</a>
                           <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
+                          <a class="dropdown-item" href="/logout">Logout</a>
+                      </div>
                 </li> 
                 {% else %}
                 <li class="nav-item">
@@ -74,6 +74,14 @@
             <div class="col-md-8">
               <h3>Login</h3>
               <hr>
+              {% if messages %}
+              <div class="alert alert-danger" role="alert">                
+                {% for message in messages %}
+                  <span class="text-monospace small">{{message}}</span>
+                {% endfor %}
+              </div>
+              <hr>
+              {% endif %}
               <form action="/login" method="post">
                 {% csrf_token %}
                   <div class="form-row">
