--- a/apps/market/templates/market/register.html
+++ b/apps/market/templates/market/register.html
@@ -46,7 +46,7 @@
                               <a class="dropdown-item" href="#">Action</a>
                               <a class="dropdown-item" href="#">Another action</a>
                               <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Something else here</a>
+                              <a class="dropdown-item" href="/logout">Logout</a>
                             </div>
                     </li> 
                     {% else %}
@@ -73,6 +73,16 @@
             <div class="col-md-8">
               <h3>Register for an Account</h3>
               <hr>
+              {% if messages %}
+              <div class="alert alert-danger" role="alert">                
+                
+                {% for message in messages %}
+                
+                  <span class="text-monospace small block">{{message}}. </span>
+                {% endfor %}
+              </div>
+              <hr>
+            {% endif %}
               <form action="/register" method="post">
                 {% csrf_token %}
                   <div class="form-row">
@@ -117,12 +127,13 @@
                     </div>
                     <div class="form-group col-md-2">
                       <label for="inputZip">Zip</label>
-                      <input type="text" class="form-control" name="zipcode" id="inputZip">
+                      <input type="text" class="form-control" name="zip_code" id="inputZip">
                     </div>
                   </div>
     
                   <button type="submit" class="btn btn-primary">Register</button>
                 </form>
+
             
             </div>
           </div>
