--- a/apps/market/templates/market/index.html
+++ b/apps/market/templates/market/index.html
@@ -44,7 +44,8 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 {% if 'designer' in request.session %}<a class="dropdown-item" href="/new-design">Add Design</a>{% endif%}
-                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="/editprofile/{{request.session.user_id}}">Edit Account</a>
+                                <a class="dropdown-item" href="">View Orders</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/logout">Logout</a>
                             </div>
