--- a/apps/market/templates/market/password.html
+++ b/apps/market/templates/market/password.html
@@ -39,16 +39,16 @@
                     
                     {% if 'user_id' in request.session %}
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          My Account
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          {% if 'designer' in request.session %}<a class="dropdown-item" href="/new-design">Add Design</a>{% endif%}
-                          <a class="dropdown-item" href="/editprofile">Edit Account</a>
-                          <a class="dropdown-item" href="">View Orders</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="/logout">Logout</a>
-                      </div>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            My Account
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            {% if 'designer' in request.session %}<a class="dropdown-item" href="/new-design">Add Design</a>{% endif%}
+                            <a class="dropdown-item" href="/editprofile">Edit Account</a>
+                            <a class="dropdown-item" href="">View Orders</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/logout">Logout</a>
+                        </div>
                     </li> 
                     {% else %}
                     <li class="nav-item">
@@ -72,68 +72,46 @@
         <hr>
           <div class="row justify-content-center">
             <div class="col-md-8">
-              <h3>Register for an Account</h3>
+              <h3>Edit your Password</h3> 
               <hr>
               {% if messages %}
               <div class="alert alert-danger" role="alert">                
                 
                 {% for message in messages %}
                 
-                  <p class="text-monospace small" style="margin-bottom:0px;">{{ forloop.counter }}) {{message}}. </p>
+                  <p class="text-monospace small" style="margin-bottom:0px;">{{ forloop.counter }}) {{message}} </p>
                 {% endfor %}
               </div>
               <hr>
             {% endif %}
-              <form action="/register" method="post">
+              <form action="/editpassword" method="post">
                 {% csrf_token %}
                   <div class="form-row">
                     <div class="form-group col-md-6">
-                      <label for="inputName">Name</label>
-                      <input type="text" class="form-control" id="inputName" name="name" placeholder="Full Name">
+                      <label for="inputName">Current Password</label>
+                      <input type="password" class="form-control" id="inputName" name="password" placeholder="Current Password">
                     </div>
                     <div class="form-group col-md-6">
-                      <label for="inputEmail">Email</label>
-                      <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Email">
+                    
                     </div>
                   </div>
                   <div class="form-row">
-                      <div class="form-group col-md-6">
-                          <label for="inputPassword">Password</label>
-                          <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password">
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword">New Password</label>
+                            <input type="password" class="form-control" id="inputPassword" name="new_password" placeholder="New Password">
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="inputConfirmPassword">Confirm Password</label>
-                            <input type="password" class="form-control" id="inputConfirmPassword" name="c_password" placeholder="Confirm Password">
-                          </div>
+                            <label for="inputConfirmPassword">Confirm New Password</label>
+                            <input type="password" class="form-control" id="inputConfirmPassword" name="c_password" placeholder="Confirm New Password">
+                        </div>
                     </div>
+                    <input type="hidden" value="{{request.session.user_id}}" name="id">
                   
-                  <div class="form-group">
-                    <label for="inputAddress">Address</label>
-                    <input type="text" class="form-control" id="inputAddress" name="address" placeholder="1234 Main St">
-                  </div>
-
-                  <div class="form-row">
-                    <div class="form-group col-md-6">
-                      <label for="inputCity">City</label>
-                      <input type="text" class="form-control" name="city" id="inputCity">
-                    </div>
-                    <div class="form-group col-md-4">
-                      <label for="inputState">State</label>
-                      <select id="inputState" name="state" class="form-control">
-                        <option selected>Choose...</option>
-                        {% for st in states %}
-                        <option>{{st}}</option>
-                        {% endfor %}
-                      </select>
-                    </div>
-                    <div class="form-group col-md-2">
-                      <label for="inputZip">Zip</label>
-                      <input type="text" class="form-control" name="zip_code" id="inputZip">
-                    </div>
-                  </div>
     
-                  <button type="submit" class="btn btn-primary">Register</button>
+                  <button type="submit" class="btn btn-primary">Update</button>
                 </form>
+                <hr>
+                <a href="/editprofile"><button type="submit" class="btn btn-secondary btn-sm">Back to profile</button></a>
 
             
             </div>
