--- a/apps/market/templates/market/register.html
+++ b/apps/market/templates/market/register.html
@@ -43,7 +43,7 @@
                           My Account
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          {% if 'designer' in request.session %}<a class="dropdown-item" href="/new-design">Add Design</a>{% endif%}
+                          {% if 'designer' in request.session %}<a class="dropdown-item" href="/newdesign">Add Design</a>{% endif%}
                           <a class="dropdown-item" href="/editprofile">Edit Account</a>
                           <a class="dropdown-item" href="">View Orders</a>
                           <div class="dropdown-divider"></div>
