fixed models, added secondary image for display image to protect design file in private s3 bucket

--- a/apps/market/templates/market/designs.html
+++ b/apps/market/templates/market/designs.html
@@ -78,8 +78,8 @@
        <div class="row">
             <div class="col-md-10 order-md-2">
                     <h1>Designs</h1>
-                    
-                </div>
+                    <img src="https://s3.us-east-2.amazonaws.com/shirtatlas-static/1USA+Flag+Firefighter.png" width="100px">
+                </div>  
            <div class="col-md-2">
                <h5>Categories</h5>
                 <ul class="list-group list-group-flush" id="cat-list">
