--- a/apps/market/templates/market/newdesign.html
+++ b/apps/market/templates/market/newdesign.html
@@ -86,13 +86,33 @@
                     {% csrf_token %}
                     <input type="hidden" name="user_id" value="{{request.session.user_id}}">
                     <div class="form-row">
-                        <div class="form-group col-md-6">                      
+                        <div class="form-group col">     
+                            <label for="inputName">Name</label>                 
                             <input type="text" class="form-control" id="inputName" name="name" placeholder="Design Name">
                         </div>
-                        <div class="form-group col-md-6">
-                            <input type="file" class="custom-file-input" id="customFile" name="design_file">
-                            <label class="custom-file-label" for="customFile">Choose file</label>
-                        </div>
+                    </div>
+                    <div class="form-group">
+                            Display Image
+            
+                            <div class="col" style="margin-top:5px;">
+                                    <input type="file" class="custom-file-input" id="displayFile" name="design_image">
+                                    <label class="custom-file-label" for="displayFile">Choose file - Display Image</label>
+                                    <small id="displayFile" class="form-text text-muted">
+                                            Image to feature your design on our website, please use <a href="https://placeit.net/" target="new">PlaceIt</a>.
+                                    </small>
+                                </div>
+                    </div>
+                    <div class="form-group">
+                            Design File
+                            
+                            <div class="col" style="margin-top:5px;">
+                                    <input type="file" class="custom-file-input" id="designFile" name="design_file">
+                                    <label class="custom-file-label" for="designFile">Choose file - Display Image</label>
+                                    <small id="designFile" class="form-text text-muted">
+                                            This is the design file issued with the license, please use a png or jpg.
+                                    </small>
+                            </div>
+                                
                     </div>
                     <div class="form-group">
                         <label for="inputDesc">Description</label>
@@ -101,7 +121,7 @@
                     <div class="form-row">
                             <div class="form-group col-md-6">
                                     <label for="inputCategory">Categories</label>
-                                    <select multiple="multiple" class="form-control" id="inputCategory" name="category">
+                                    <select multiple="multiple" class="form-control" id="inputCategory" name="category" style="height:82%; margin-bottom: 5px;">
                                         <option>Tattoo</option>
                                        
                                         <option>Heraldry</option>
@@ -128,93 +148,22 @@
                                             You can pick up to 3 categories.
                                     </small>
                                 </div>
-      <!--                   <div class="form-group col-md-6">
-                                <label for="inputFontStyle">Font Style</label>
-                                <select class="form-control" id="inputFontStyle" name="font_style">
-                                    <option>Fancy</option>
-                                    <option>Foreign</option>
-                                    <option>Techno</option>
-                                    <option>Bitmap</option>
-                                    <option>Gothic</option>
-                                    <option>Basic</option>
-                                    <option>Script</option>
-                                    <option>Dingbats</option>
-                                    <option>Holiday</option>
-                                </select>
-                                <small id="inputFontStyle" class="form-text text-muted">
-                                       Refer to <a href="https://www.dafont.com/" target="new">DaFont</a> for classifications.
-                                </small>
-                        </div> -->
+
                         <div class="form-group col-md-6">
                             <label for="inputPrice">Price</label>
-                            <input type="number" class="form-control" id="inputPrice" name="price" placeholder="9.99" step="0.01">
+                            <input type="number" class="form-control" id="inputPrice" name="price" placeholder="9.99" step="0.01" min=5>
+                            <small id="inputPrice" class="form-text text-muted">
+                                    Minimum list price is $5 for a design.
+                            </small>
+                            <hr>
+                            <label for="inputLicenses"># of Licenses</label>
+                            <input type="number" class="form-control" id="inputLicenses" name="licenses" placeholder="10" min=1>
+                            <small id="inputLicenses" class="form-text text-muted">
+                                    How many licenses do you want to sell?
+                            </small>
                         </div>
                     </div>
-                    <div class="form-row">
-                       <!--  <div class="form-group col-md-6">
-                            <label for="inputCategory">Categories</label>
-                            <select multiple class="form-control" id="inputCategory" name="category">
-                                <option>Tattoo</option>
-                                <option>Bikers</option>
-                                <option>Characters</option>
-                                <option>Heraldry</option>
-                                <option>Holiday</option>
-                                <option>Photoshop</option>
-                                <option>Religious</option>
-                                <option>Sexy Pin-ups</option>
-                                <option>Skulls</option>
-                                <option>Sports</option>
-                                <option>Typography</option>
-                                <option>Urban</option>
-                                <option>Patterns</option>
-                                <option>Funny</option>
-                                <option>Art Style</option>
-                                <option>Comics</option>
-                                <option>Pop Culture</option>
-                                <option>Retro</option>
-                                <option>Sci-Fi &amp; Fantasy</option>
-                                <option>Gym</option>
-                                <option>Abstract</option>
-                                <option>Anime</option>
-                                <option>Animals</option>
-                                <option>Food &amp; Drink</option>
-                                <option>Gaming</option>
-                                <option>Horror</option>
-                                <option>Monsters</option>
-                                <option>Music</option>
-                                <option>Zombies</option>
-                                <option>Cars</option>
-                                <option>Yoga</option>
-                                <option>Nature</option>
-                                <option>Geek</option>
-                                <option>Camping</option>
-                                <option>Love</option>
-                                <option>Pregnancy</option>
-                                <option>Party</option>
-                            </select>
-                            <small id="inputCategory" class="form-text text-muted">
-                                    You can pick up to 3 categories.
-                            </small>
-                        </div> -->
-<!--                         <div class="form-group col-md-6">
-                                <label for="inputColors">Colors</label>
-                                <select multiple class="form-control" id="inputColors">
-                                  <option>Yellow</option>
-                                  <option>Orange</option>
-                                  <option>Red</option>
-                                  <option>Pink</option>
-                                  <option>Purple</option>
-                                  <option>Blue</option>
-                                  <option>Green</option>
-                                  <option>Brown</option>
-                                  <option>Gray</option>
-                                  <option>Black</option>
-                                </select>
-                                <small id="inputCategory" class="form-text text-muted">
-                                        If your design has multiple colors, select up to 3.
-                                </small>
-                        </div> -->
-                    </div>
+                    <hr>
                   <button type="submit" class="btn btn-primary">Add</button>
                 </form>
             </div>
