--- a/apps/market/templates/market/test.html
+++ b/apps/market/templates/market/test.html
@@ -12,5 +12,8 @@
     <input name="name" value="{{request.GET.name}}">
     <button type="submit">Go</button>
     </form>
+
+    <hr>
+    <img src="https://s3.us-east-2.amazonaws.com/shirtatlas-static/1USA+Flag+Firefighter.png">
 </body>
 </html>
