--- a/apps/market/templates/market/design.html
+++ b/apps/market/templates/market/design.html
@@ -48,7 +48,10 @@
                                 My Account
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                {% if 'designer' in request.session %}<a class="dropdown-item" href="/newdesign">Add Design</a>{% endif%}
+                                {% if 'designer' in request.session %}
+                                    <a class="dropdown-item" href="/newdesign">Add Design</a>
+                                    <a class="dropdown-item" href="/viewdesigns/{{request.session.user_id}}">Manage Designs</a>
+                                {% endif%}
                                 <a class="dropdown-item" href="/editprofile">Edit Account</a>
                                 <a class="dropdown-item" href="">View Orders</a>
                                 <div class="dropdown-divider"></div>
