--- a/apps/market/templates/market/editdesign.html
+++ b/apps/market/templates/market/editdesign.html
@@ -15,6 +15,11 @@
     .black-opacity:hover{
         background-color:rgba(0, 0, 0, 0.5);
     }
+
+    #cat-list li {
+        padding: 5px;
+        font-size:.8em;
+    }
     </style>
 </head>
 <body>
@@ -22,16 +27,16 @@
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <a class="navbar-brand" href="#"> <img src="{% static 'ShirtAtlas.gif' %}" height="50" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
+                    <ul class="navbar-nav">
 
                     <li class="nav-item">
-                      <a class="nav-link" href="/">Men</a>
+                        <a class="nav-link" href="/">Men</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/">Women</a>
+                        <a class="nav-link" href="/">Women</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">Kids</a>
@@ -68,64 +73,18 @@
                         <a class="nav-link" href="/">Checkout</a>
                     </li>
                     
-                  </ul>
+                    </ul>
             </div>
         </nav>
+        <hr>
     <div class="container-fluid">
-        <hr>
-          <div class="row justify-content-center">
-            <div class="col-md-8">
-              <h3>Edit your Password</h3> 
-              <hr>
-              {% if messages %}
-              <div class="alert alert-danger" role="alert">                
-                
-                {% for message in messages %}
-                
-                  <p class="text-monospace small" style="margin-bottom:0px;">{{ forloop.counter }}) {{message}} </p>
-                {% endfor %}
-              </div>
-              <hr>
-            {% endif %}
-              <form action="/editpassword" method="post">
-                {% csrf_token %}
-                  <div class="form-row">
-                    <div class="form-group col-md-6">
-                      <label for="inputName">Current Password</label>
-                      <input type="password" class="form-control" id="inputName" name="password" placeholder="Current Password">
-                    </div>
-                    <div class="form-group col-md-6">
-                    
-                    </div>
-                  </div>
-                  <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="inputPassword">New Password</label>
-                            <input type="password" class="form-control" id="inputPassword" name="new_password" placeholder="New Password">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="inputConfirmPassword">Confirm New Password</label>
-                            <input type="password" class="form-control" id="inputConfirmPassword" name="c_password" placeholder="Confirm New Password">
-                        </div>
-                    </div>
-                    <input type="hidden" value="{{request.session.user_id}}" name="id">
-                  
-    
-                  <button type="submit" class="btn btn-primary">Update</button>
-                </form>
-                <hr>
-                <a href="/editprofile"><button type="submit" class="btn btn-secondary btn-sm">Back to profile</button></a>
-
-            
-            </div>
-          </div>
-        <hr>
         <div class="row">
-            <div class="col text-center">www.shirtatlas.com</div>
-        </div>
-        <hr>
+            
 
+        </div>
     </div>
+    <hr>
+
 
 
 
