--- a/apps/market/templates/market/newdesign.html
+++ b/apps/market/templates/market/newdesign.html
@@ -45,7 +45,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 {% if 'designer' in request.session %}
                                     <a class="dropdown-item" href="/newdesign">Add Design</a>
-                                    <a class="dropdown-item" href="/viewdesigns/{{request.session.user_id}}">Manage Designs</a>
+                                    <a class="dropdown-item" href="/portfolio/{{request.session.user_id}}">My Portfolio</a>
                                 {% endif%}
                                 <a class="dropdown-item" href="/editprofile">Edit Account</a>
                                 <a class="dropdown-item" href="">View Orders</a>
